Proctor/css/Steps.css
/* ... */
.step10 .testDiv .card-body{
    background-color: #221C44;
    border: 1px solid #6967FF;
    border-top: 0;
}
/* Right Panel - User Alert Section CSS */
.step10 .tileCardSection .alert-border{    
    border-radius: 30px 30px 0 0;
    position: relative;
    margin: 0 auto;
    background-color: #18C764;
    height: 65px;
}
.step10 .tileCardSection .alert-border:before{
    content: "";
    height: 69%;
    width: 99%;
    position: absolute;
    background: white;
    border-radius: 50px;
    transition: all 0.8s;
    top: 60%;
    content: "";
    position: absolute;
    left: 0.5%;
    height: 55px;
    background: #1d1739;
}
.step10 .tileCardSection .alert-container{
    height: 75px;
    font-size: 12px;
    color: #fff;
    background-color: #342D5C;
    width: 93%;
    margin: 0 auto 0;
    border-radius: 10px;
    z-index: 1;
    margin-top: -5px;
}
.step10 .tileCardSection .scroll-container{
    height: 60px;
    overflow-y: auto;
}
.step10 .tileCardSection .alert-container .dot{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #D11CCD;
    background-color: #D11CCD;
}
/* Right Panel - No of question Section CSS */
.step10 .tileCardSection .question-list{
    border: double 1px transparent;
    border-radius: 0 0 30px 30px;
    background-image: linear-gradient(#1D1739, #1D1739), linear-gradient(#6956DF,#6B2086);
    background-origin: border-box;
    background-clip: content-box, border-box;
}
.step10 .tileCardSection li{
    display: inline-block;
    color: #fff;
    font-size: 12px;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    line-height: 28px;
    text-align: center;
    margin: 0.5rem 0.35rem 0 0;
    border: 1px solid #6967FF;
    background-color: transparent;
}
.step10 .tileCardSection li.hold{
    border: 1px solid #EA1DE2;
    background-color: transparent;
}
.step10 .tileCardSection li.answered{
    border: 1px solid #6967FF;
    background-color: #6967FF;
}
.step10 .tileCardSection li.marked{
    border: 1px solid #D11CCD;
    background-color: #D11CCD;
}
.step10 .tileCardSection li.current{
    border: 1px solid #514879;
    background-color: #514879;
}
/* Right Panel - Legends Section CSS */
.step10 .tileCardSection .legend{
    color: #fff;
    font-size: 11px;
    display: inline-block;
    margin-right: 0.5rem;
}
.step10 .tileCardSection .legend .hold{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #EA1DE2;
    background-color: transparent;
}
.step10 .tileCardSection .legend .answered{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #6967FF;
    background-color: #6967FF;
}
.step10 .tileCardSection .legend .unanswered{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #6967FF;
    background-color: transparent;
}
.step10 .tileCardSection .legend .marked{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #D11CCD;
    background-color: #D11CCD;
}
.step10 .tileCardSection .legend .current{
    height: 10px;
    width: 10px;
    border-radius:50%;
    display: inline-block;
    border: 1px solid #514879;
    background-color: #514879;
}
.step10 .tileCardSection .legend-wrapper{
    background-color: #342D5C;
}
.step10 .action-btn, .step10 .next-btn{
    width: 120px;
}
/* AppropriateAnswer */
.step10 .testDiv .c-table{
    border: 2px solid #433C6D;
    color: #fff;
    text-align: center;
    table-layout: fixed;
}
.step10 .testDiv .c-table thead{
    background-color: #3B2C74;
}
.step10 .testDiv .c-table.table-bordered>:not(caption)>*>* {
    border-width: 2px 2px;
}
.step10 .testDiv .c-table .smiley-img{
    width: 35px;
}




/* Sample Will remove or incorporate based on feedback */
/* .step10.sample .testDiv{
    height: 78vh;
    overflow-y: auto;
} */



@media only screen and (min-width: 1024px) and (max-width: 1199px) {
    .wrapper{
        width: 95%;
    }
    .step2 .wrapper{
        width: 95%;
    }
    .step10 .container {
        max-width:1000px
    }
    .step10 .tileCardSection .col-10 {
        width:100%;
    }
    .step10 .wrapper {
        width:100%;
        z-index: 1;
        margin: 0;
        min-height: inherit;
    }
}
@media only screen and (min-width: 1200px) and (max-width: 1400px) {
    .wrapper{
        width: 80%;
    }
    .step2 .wrapper{
        width: 85%;
    }
    .step10 .wrapper {
        width:100%;
        z-index: 1;
        margin: 0;
        min-height: inherit;
    }
}

  
  

